# Engine

./: CMakeLists.txt
include/two_d/: vector2.h
include/two_d/shapes/: shape.h  triangle.h
include/utils/: readShader.h
src/: CMakeLists.txt  glad.c  glad.h  main.cpp
src/modules/shaders/: triangle.frag  triangle.vert
src/modules/two_d/: CMakeLists.txt  vector2.cpp
src/modules/two_d/shapes/: CMakeLists.txt  triangle.cpp
src/modules/utils/: CMakeLists.txt  readShader.cpp
